[package]
name = "tower-cc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1.0.12"
tokio = { version = "1.23.0", features = ["time"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full", "test-util"] }
tokio-test = "0.4.2"
tower = { version = "0.4.13", features = ["full"] }
tower-test = "0.4.0"
tracing-subscriber = "0.3.16"
